--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face{
+    font-family:"RF Tone";
+    src:url("./assets/fonts/RF Tone/RFTone-Regular.ttf") format('truetype');
+
+}
