--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'RF Tone';
+    scrollbar-width: thin;
+    scrollbar-color: white #1CBBEE;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: white;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #1CBBEE;
+    border-radius: 100px;
+  }
