--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
     scrollbar-width: thin;
     scrollbar-color: white #1CBBEE;
 }
+img{
+  max-width: 100%;
+}
 
 ::-webkit-scrollbar {
     width: 10px;
