changed folder structure

--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,13 @@
   --mask: radial-gradient(178.89px at 50% calc(100% - 240px),#000 99%,#0000 101%) calc(50% - 160px) 0/320px 100%,radial-gradient(178.89px at 50% calc(100% + 160px),#0000 99%,#000 101%) 50% calc(100% - 80px) /320px 100% repeat-x;
   -webkit-mask: var(--mask);
  mask: var(--mask);
- position: fixed;
+ position: sticky;
 top: 0px;
 width: 100%;
 z-index: 999;
   background: #E4EAF3;
   height: 200px;
-    }
+  }
 
     @media (max-width: 700px) {
       .wave {
